tcw3/designer/tests/bad/use_dupe.tcwdl
// `A` is defined for multiple times
use tcw3::{A, B as A};
//~^ ERROR is imported for multiple times

pub comp crate::Comp1 {
    prop field: A;
}
